HHH-14970 make use of new Java language features from v8 to v11